--- a/first_project/CMakeLists.txt
+++ b/first_project/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+        tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -207,4 +208,7 @@ include_directories(
 
 add_executable(gps_to_odom src/gps_to_odom.cpp)
 target_link_libraries(gps_to_odom ${catkin_LIBRARIES})
+
+add_executable(odom_to_tf src/odom_to_tf.cpp)
+target_link_libraries(odom_to_tf ${catkin_LIBRARIES})
 
