--- a/first_project/CMakeLists.txt
+++ b/first_project/CMakeLists.txt
@@ -8,11 +8,12 @@ project(first_project)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
-  std_msgs
+        roscpp
+        rospy
+        std_msgs
         tf
-)
+        dynamic_reconfigure
+        )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -103,11 +104,16 @@ find_package(catkin REQUIRED COMPONENTS
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
+generate_dynamic_reconfigure_options(
+        cfg/dynamic_reconfigure.cfg
+)
+
+
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES first_project
-#  CATKIN_DEPENDS roscpp rospy std_msgs
-#  DEPENDS system_lib
+        #  INCLUDE_DIRS include
+        #  LIBRARIES first_project
+        #  CATKIN_DEPENDS roscpp rospy std_msgs
+        #  DEPENDS system_lib
 )
 
 ###########
@@ -117,8 +123,8 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
-  ${catkin_INCLUDE_DIRS}
+        # include
+        ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -211,4 +217,7 @@ target_link_libraries(gps_to_odom ${catkin_LIBRARIES})
 
 add_executable(odom_to_tf src/odom_to_tf.cpp)
 target_link_libraries(odom_to_tf ${catkin_LIBRARIES})
+
+add_executable(lidar_remap src/lidar_remap.cpp)
+target_link_libraries(lidar_remap ${catkin_LIBRARIES})
 
