--- a/Second_Project/CMakeLists.txt
+++ b/Second_Project/CMakeLists.txt
@@ -200,3 +200,6 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+add_executable(tf_publisher src/tf_publisher.cpp)
+add_executable(navigation src/navigation.cpp)
