--- a/second_project/config/costmap_common_params.yaml
+++ b/second_project/config/costmap_common_params.yaml
@@ -1,6 +1,7 @@
 # Obstacle Cost Shaping (http://wiki.ros.org/costmap_2d/hydro/inflation)
 #robot_radius: 0.20  # distance a circular robot should be clear of the obstacle (kobuki: 0.18)
 footprint: [ [ -0.306, -0.290 ], [ -0.306, 0.290 ], [ 0.306, 0.290 ], [ 0.306, -0.290 ] ]
+footprint_padding: 0.01
 
 map_type: costmap_2d
 
