--- a/second_project/config/global_costmap_params.yaml
+++ b/second_project/config/global_costmap_params.yaml
@@ -6,6 +6,8 @@ global_costmap:
    publish_frequency: 0.5
    static_map: true
    transform_tolerance: 0.5
+   width: 41.0  # Match the floorplan's width
+   height: 30.0
    plugins:
      - {name: static_layer,            type: "costmap_2d::StaticLayer"}
      - {name: inflation_layer,         type: "costmap_2d::InflationLayer"}
