--- a/second_project/maps/stage/maps.yaml
+++ b/second_project/maps/stage/maps.yaml
@@ -1,5 +1,5 @@
-image: stage/maps.pgm
-resolution: 0.050000
+image: maps.pgm
+resolution: 0.05000
 origin: [-10.000000, -21.200000, 0.000000]
 negate: 0
 occupied_thresh: 0.65
