--- a/second_project/config/teb_local_planner_params.yaml
+++ b/second_project/config/teb_local_planner_params.yaml
@@ -16,12 +16,12 @@ TebLocalPlannerROS:
 
   max_vel_x: 3.0
   max_vel_x_backwards: 0.8
-  max_vel_y: 0.0
+  max_vel_y: 3.0
   max_vel_theta: 3.0
   acc_lim_x: 3.0
-  acc_lim_y: 0.0
+  acc_lim_y: 3.0
   acc_lim_theta: 1
-  min_turning_radius: 0.29
+  min_turning_radius: 0.0
   footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
     footprint_model:
       type: "polygon"
@@ -33,10 +33,13 @@ TebLocalPlannerROS:
   xy_goal_tolerance: 0.2
   yaw_goal_tolerance: 0.1
   free_goal_vel: False
+  optimization_activate: True
+  oscillation_v_eps: 0.1
+  oscillation_omega_eps: 0.05
 
   # Obstacles
 
-  min_obstacle_dist: 0.3
+  min_obstacle_dist: 0.4
   include_costmap_obstacles: True
   costmap_obstacles_behind_robot_dist: 1.0
   obstacle_poses_affected: 30
