--- a/second_project/config/costmap_common_params.yaml
+++ b/second_project/config/costmap_common_params.yaml
@@ -1,7 +1,7 @@
 # Obstacle Cost Shaping (http://wiki.ros.org/costmap_2d/hydro/inflation)
 #robot_radius: 0.20  # distance a circular robot should be clear of the obstacle (kobuki: 0.18)
 footprint: [ [ -0.306, -0.290 ], [ -0.306, 0.290 ], [ 0.306, 0.290 ], [ 0.306, -0.290 ] ]
-footprint_padding: 0.01
+footprint_padding: 0.2
 
 map_type: costmap_2d
 
@@ -11,7 +11,7 @@ obstacle_layer:
   mark_threshold:       0
   combination_method:   1
   track_unknown_space:  true    #true needed for disabling global path planning through unknown space
-  obstacle_range: 2.5  # maximum range in meters at which to insert obstacles into the costmap using sensor data
+  obstacle_range: 3.0  # maximum range in meters at which to insert obstacles into the costmap using sensor data
   raytrace_range: 3.0 # maximum range in meters at which to raytrace out obstacles from the map using sensor data
   observation_sources:  scan
   scan:
@@ -21,13 +21,14 @@ obstacle_layer:
     clearing: true
     min_obstacle_height: 0.25
     max_obstacle_height: 0.35
-  
+  laser_scan_sensor: {sensor_frame: laser_frame, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
+
 
 #cost_scaling_factor and inflation_radius were now moved to the inflation_layer ns
 inflation_layer:
   enabled:              true
-  cost_scaling_factor:  5.0  # exponential rate at which the obstacle cost drops off (default: 10)
-  inflation_radius:     0.5  # max. distance from an obstacle at which costs are incurred for planning paths.
+  cost_scaling_factor:  15.0  # exponential rate at which the obstacle cost drops off (default: 10)
+  inflation_radius:     1.0  # max. distance from an obstacle at which costs are incurred for planning paths.
 
 static_layer:
   enabled:              true
