--- a/second_project/config/global_costmap_params.yaml
+++ b/second_project/config/global_costmap_params.yaml
@@ -1,14 +1,24 @@
 global_costmap:
-   
+
    global_frame: map
    robot_base_frame: base_footprint
-   update_frequency: 1.0
-   publish_frequency: 0.5
+   update_frequency: 5.0
+   publish_frequency: 2.0
    static_map: true
    transform_tolerance: 0.5
    width: 12.08   # Match the floorplan's width
    height: 6.44
    plugins:
-     - {name: static_layer,            type: "costmap_2d::StaticLayer"}
-     - {name: inflation_layer,         type: "costmap_2d::InflationLayer"}
+      - {name: static_layer,            type: "costmap_2d::StaticLayer"}
+      - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
+      - {name: inflation_layer,         type: "costmap_2d::InflationLayer"}
 
+inflation_layer:
+   enabled: true
+   inflation_radius: 0.2
+   cost_scaling_factor: 25.0
+
+obstacle_layer:
+   enabled: true
+   observation_sources: laser_scan
+   laser_scan: {sensor_frame: laser_frame, data_type: LaserScan, clearing: true, marking: true}
