--- a/second_project/config/local_costmap_params.yaml
+++ b/second_project/config/local_costmap_params.yaml
@@ -8,8 +8,24 @@ local_costmap:
    rolling_window: true
    width: 6.0
    height: 6.0
-   resolution: 0.05
+   resolution: 0.055
    transform_tolerance: 0.5 #maximum amount of latency allowed between tf
    plugins:
-    - {name: obstacle_layer,      type: "costmap_2d::VoxelLayer"}
-    - {name: inflation_layer,     type: "costmap_2d::InflationLayer"}
+      - {name: obstacle_layer,      type: "costmap_2d::VoxelLayer"}
+      - {name: inflation_layer,     type: "costmap_2d::InflationLayer"}
+
+inflation_layer:
+   enabled: true
+   cost_scaling_factor: 25.0
+   inflation_radius: 0.2
+
+obstacle_layer:
+   enabled: true
+   obstacle_range: 2.5
+   raytrace_range: 3.0
+   max_obstacle_height: 3.0
+   min_obstacle_height: 0.1
+   track_unknown_space: true
+   combination_method: 1
+   observation_sources: laser_scan
+   laser_scan: {sensor_frame: laser_frame, data_type: LaserScan, marking: true, clearing: true}
