--- a/second_project/config/teb_local_planner_params.yaml
+++ b/second_project/config/teb_local_planner_params.yaml
@@ -14,23 +14,22 @@ TebLocalPlannerROS:
 
   # Robot
 
-  max_vel_x: 3.0
-  max_vel_x_backwards: 0.8
-  max_vel_y: 3.0
-  max_vel_theta: 3.0
-  acc_lim_x: 3.0
-  acc_lim_y: 3.0
-  acc_lim_theta: 1
+  max_vel_x: 1.0
+  max_vel_x_backwards: 0.2
+  max_vel_y: 1.0
+  max_vel_theta: 1.0
+  acc_lim_x: 0.5
+  acc_lim_y: 0.5
+  acc_lim_theta: 1.0
   min_turning_radius: 0.0
-  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-    footprint_model:
-      type: "polygon"
-      vertices: [ [ -0.306, -0.290 ], [ -0.306, 0.290 ], [ 0.306, 0.290 ], [ 0.306, -0.290 ] ]
+  footprint_model:
+    type: "polygon"
+    vertices: [ [ -0.306, -0.290 ], [ -0.306, 0.290 ], [ 0.306, 0.290 ], [ 0.306, -0.290 ] ]
 
 
     # GoalTolerance
 
-  xy_goal_tolerance: 0.2
+  xy_goal_tolerance: 0.1
   yaw_goal_tolerance: 0.1
   free_goal_vel: False
   optimization_activate: True
@@ -39,10 +38,29 @@ TebLocalPlannerROS:
 
   # Obstacles
 
-  min_obstacle_dist: 0.4
+  min_obstacle_dist: 0.6
+  inflation_dist: 0.5
   include_costmap_obstacles: True
   costmap_obstacles_behind_robot_dist: 1.0
   obstacle_poses_affected: 30
-  costmap_converter_plugin: ""
+  costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
   costmap_converter_spin_thread: True
   costmap_converter_rate: 5
+
+  obstacle_layer:
+    enabled: true
+    max_obstacle_height: 2.5
+    min_obstacle_height: 0.5
+    origin_z: 0.0
+    z_resolution: 0.2
+    z_voxels: 2
+    obstacle_range: 2.5
+    raytrace_range: 3.0
+    observation_sources: laser_scan
+    laser_scan: { sensor_frame: laser_scan, data_type: LaserScan, topic: scan, marking: true, clearing: true }
+    obstacle_behind_robot_dist: 1.0  # Considera ostacoli fino a 1 metro dietro il robot
+
+    inflation_layer:
+      enabled: true
+      inflation_radius: 0.2
+      cost_scaling_factor: 25.0
