--- a/second_project/maps/map.yaml
+++ b/second_project/maps/map.yaml
@@ -1,6 +1,6 @@
 image: map.pgm
-resolution: 0.050000
-origin: [-8.000000, -20.200000, 0.000000]
+resolution: 0.0550000
+origin: [-9.000000, -22.200000, 0.000000]
 size:   [ 31.08, 16.44, 2.0 ]
 negate: 0
 occupied_thresh: 0.65
